<resources>
    <string name="app_name">O\'Livraison</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Déconnexion</string>


    <string name="Ajouter_livreur">Ajouter un Livreur</string>
    <string name="Liste_livreur">Liste des Livreurs</string>

    <string name="Liste_commandes_cours">Commandes en cours </string>
    <string name="Liste_commandes">Liste des commandes </string>
    <string name="Ajouter_commande">Ajouter une commande</string>

    <string name="Set_server">Adresse serveur</string>
    <string name="Set_Setting">Mon profil</string>


    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_incorrect_login">Cet identifiant n\'existe pas</string>
    <string name="error_empty_password">Veuillez indiquer un mot de passe</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_index">Commandes en cours</string>

    <string name="action_add">+</string>
    <string name="title_activity_index_livreur">Mes livraisons</string>
    <string name="title_activity_details_commande_cours">Détails de la commande</string>
    <string name="title_activity_detail_commande_livreur">Détails de la commande</string>
    <string name="title_activity_livreur_maps">Map</string>
    <string name="title_activity_addcommande">Ajouter une commande</string>

    <string-array name="civilite">
        <item>Mr</item>
        <item>Mme</item>
        <item>Mlle</item>
    </string-array>
    <string name="title_activity_liste_livreurs">Liste des livreurs</string>


    <string name="title_activity_addlivreur">Ajouter un livreur</string>

</resources>

