<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="single">

        <item
            android:id="@+id/nav_livraison_cours"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Liste_commandes_cours" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Liste_commandes" />
    </item>

    <item android:title="Paramètres">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Set_Setting" />
            <item
                android:id="@+id/deconnexion"
                android:title="Déconnexion" />
        </menu>
    </item>

</menu>
